# gemtc

./: APILoopSizeBenchmark.sh  APIMatrixTest.cu  APIMemorySizeBenchmark.sh  APITestMain.cu  APIThreadTest.cu  APIThreadTest.cu~  APIbenchmark.sh  DataMovement.cu  Makefile  README.md  SuperKernel.cu  benMain.cu  build.sh  compileAPIMatrixTest.sh  compileAPIThreadTest.sh~  compileCuda.sh  compileThreads.sh  gemtc.cu  main.c  main.cu  tests.cu  threadTest.c  txt.txt
CPUAPI/: CPUAPI_main.c  Makefile  QueueJobs.c  QueueJobs.h  SuperKernel.c  SuperKernel.c~  gemtcCPU.c  gemtcCPU.h  main
CPUAPI/Kernels/: AddSleep.c  AddSleep.c~  MatrixMultiply.c  MatrixSquare.c  MatrixSquare.c~
Kernels/: .MDFake.cu.swp  .MDProxy.cu.swp  AddSleep.cu  AddSleep.cu~  ArrayAtomic.cu  ArrayAvg.cu  ArrayMax.cu  ArrayMin.cu  ArrayRotate.cu  BlackScholes.cu  DummyMatrixMultiply.cu  Fake.cu  FluidTVD.cu  FluidW.cu  ImageConv.cu  LCSubstring.cu  LVSubstring.old.cu  LogValues.cu  MDFake.cu  MDProxy.cu  MD_Fake.cu  MatrixDet.cu  MatrixInverse.cu  MatrixMultiply.cu  MatrixSquare.cu  MatrixTranspose.cu  MatrixVector.cu  Pi.cu  SciColSim.cu  SciColSim_Single.cu  Sleep0.cu  Sleep1.cu  Sleep2.cu  Sort.cu  Sort.cu~  Square.cu  StencilCopy.cu  StencilUpdate.cu  VecAdd.cu  VecDot.cu  (+7 more)
MICAPI/: Makefile
Queues/: QueueHelpers.cu  QueueHelpers.cu~  QueueJobs.cu  QueueJobs.cu~
Tests/: mem-test.tar
Tests/CopyTest/: kernel.cu  kernel.cu~  run
Tests/Imogen/: README  build.sh
Tests/IncTest/: Makefile  test  test.cu
Tests/PrintTest/: kernel.cu  kernel.cu~  print  print.cu  print.cu~  run  test.cu~
Tests/SciColSim/: README  build.sh  optimizer-multi-loss.cpp  optimizer.cpp  test-annealing-exm.sh
Tests/TaskBundling/: BundlingTest.cu  compile.sh
Tests/advmpi/: Makefile  Makefile.in  README  configure  configure.ac  mlife-io.h  mlife2d-fence.c  mlife2d-io-stdout1.c  mlife2d-pt2pt.c  mlife2d-pt2pt9.c  mlife2d-pt2ptsnd.c  mlife2d-pt2ptuv.c  mlife2d.c  mlife2d.h  mlifeconf.h  mlifeconf.h.in  moptions.c  mtiming.c  patch.c
Tests/c-tests/: sizeof.c
Tests/deviceQuery/: Makefile  NsightEclipse.xml  readme.txt
Tests/gemtc-benchmarking/: APIArrayAtomicTest.cu  APIArrayRotateTest.cu  APILoopSizeBenchmark.sh  APIMatrixBenchmark.sh  APIMatrixTest.cu  APIMemorySizeBenchmark.sh  APITestMain.cu  APIThreadTest.cu  APIVecAddTest.cu  APIbenchmark.sh  LCSubstringTest  LCSubstringTest.cu  SquareTest.cu  compileAPIArrayAtomicTest.sh  compileAPIArrayRotateTest.sh  compileAPIMatrixTest.sh  compileAPITest.sh  compileAPIThreadTest.sh  compileAPIThreadTest.sh~  compileAPIVecAddTest.sh  compileBen.sh  compileBen.sh~  compileCuda.sh  compileCuda.sh~  compileLCSubstringTest.sh  compileMain.sh  compileMain.sh~  compileSingle.sh  mainTest.cu  singleTaskTime.cu  singleTaskTime.cu~
Tests/gpu-mem-copy-test/: Makefile  Makefile~  README.md  benchMalloc.sh  benchMallocFree.sh  benchmark.sh~  cudaMallocTest.cu  devToHost  devToHost.cu  devToHost.cu~  devToHostAsync  devToHostAsync.cu  devToHostAsync.cu~  hostToDev  hostToDevAsync  hostToDevAsync.cu  hostToDevice.cu  mFree.c  mFree.c~  malloc  malloc.c  malloc.c~  testMalloc  testMallocFree
Tests/mdproxy/: .ComputeTest.cu.swp  .MDProxy.cu.swp  ComputeTest  ComputeTest.cu  InitTest  InitTest.cu  MDProxy  MDProxy.cu  MDProxyClient.cu  MDProxyTestFrags.cu  UpdateTest  UpdateTest.cu  compileComputeTest.sh  compileInitTest.sh  compileMDProxy.sh  compileUpdateTest.sh
Tests/mdproxy_multi/: MDProxy  MDProxy.cu  MDProxyMultiClient.cu  compileMDProxy  compileMDProxy.sh  md_sudo.swift
Tests/mpi_test/: About.txt  addSleep.cu  buildGemtc.sh  compileCuda.sh  compileMain.sh  main.c  setup.c  setup.swift  test  test-setup.swift  test-setup.tcl
Tests/mpi_test_2/: About.txt  pkgIndex.tcl  setup.c  test-setup.sh  test-setup.swift  test-setup.tcl
Tests/nsf-xps/: #count.c#  Makefile  cilkFib  count.c  fib.c  fib.cilk  fib.cilk~  fib.c~  hello  hello.c  out.txt  slow  slowFib  slowfib.c  test.sh  test.sh~  testCilk.sh
Tests/pure_cuda_sleep/: build.sh  sleep  sleep.cu  sleep.cu~  test.sh  test.sh~
Tests/python/: concat.py  file.txt  print.py  stderr.py  write.py
Tests/scicolsim/: LogTest  LogTest.cu  compileLogTest.sh
Tests/swift-sleep-tests/: 589-big-loop.swift  589-big-loop.tcl  log.txt  test.sh  test.sh~
Tests/swift_c_sleep/: About.txt  build.sh  log.txt  pkgIndex.tcl  sleep1.c  sleep1.tcl  sleepcpy.swift  test-sleep1.sh  (+5 more)
c_wrapper_join/: About.txt  gemtc_cleanup.c  gemtc_setup.c  libtest.so.backup  log.txt  setup.c  setup.tcl  test  test-setup.sh  test-setup.swift  test-setup.tcl
documentation/: article.html  article.txt  article.txt~  build.sh
dummyAPI/: Makefile  Makefile~  api  api.c  api.c~  api.h  test-api.c
logs/: log1.txt  logAPIMatrixTest1.txt  logAPIMatrixTest2.txt  logAPIMatrixTest3.txt  logAPIMatrixTest4.txt
malloc/: GemtcMalloc.cu  GemtcMalloc.cu~  benchmark.sh  mallocTest
scripts/: stop-x.sh
tests/: README.md  jenkins-test.sh
utils/: deviceQuery  logger.c  logger.h
(+629 files in other folders)
